# ku-lms-cli

./: .gitignore  KU_LMS.env.example  README.md  README_ko.md  pyproject.toml
codex/skills/ku-lms/: SKILL.md
codex/skills/ku-lms/agents/: openai.yaml
codex/skills/ku-lms/references/: commands.md
codex/skills/ku-lms/scripts/: international_law_captions_to_drive.py
docs/: discovery.md  live.md
scripts/: install.sh  safety_scan.py
src/ku_lms_cli/: __init__.py  captions.py  cli.py  config.py  discovery.py  domain.py  live.py  paths.py  provider.py  redaction.py  session.py
tests/: test_config_redaction_cli.py  test_discovery.py  test_live_provider.py  test_provider_cli_core.py  test_safety_scan.py
