[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ku-lms-cli"
version = "0.1.0"
description = "Secret-safe, discovery-first CLI scaffold for Korea University LMS automation."
requires-python = ">=3.9"
readme = "README.md"
license = "LicenseRef-Proprietary"
authors = [{ name = "KU LMS CLI maintainers" }]
dependencies = ["websockets>=10,<16"]

[project.scripts]
ku-lms = "ku_lms_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src", "."]

[project.optional-dependencies]
browser = []

